xhtml face archive added

--- a/crypfolio/web/faces/user.xhtml
+++ b/crypfolio/web/faces/user.xhtml
@@ -43,6 +43,13 @@
 
             </p:tab>
 
+            <!-- include CoinsArchive tabView-->
+            <p:tab title="Archive">
+
+                <ui:include src="/faces/archive.xhtml"/>
+
+            </p:tab>
+
             <!-- include Watchlist tabView-->
             <p:tab title="Watchlist">
 
