whatchlist and account-menu changes, portfolio && archive tabs created

--- a/crypfolio/web/faces/archive.xhtml
+++ b/crypfolio/web/faces/archive.xhtml
@@ -4,6 +4,11 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui">
 
+    <p:outputPanel id="archivePanel">
+
+
+
+    </p:outputPanel>
 
 
 
